--- a/MainWindow/MainWindow.csproj
+++ b/MainWindow/MainWindow.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E4D68DC-36BD-4250-9918-C218577F5E1D}</ProjectGuid>
+    <ProjectGuid>{246EFAC2-B57A-4076-986A-0F93C757FC6E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Compi</RootNamespace>
-    <AssemblyName>Compi</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>MainWindow</RootNamespace>
+    <AssemblyName>MainWindow</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,79 +41,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accion.cs" />
-    <Compile Include="AnalizadorLexico.cs" />
-    <Compile Include="ArbolAS.cs" />
-    <Compile Include="MainWinForm.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainWinForm.Designer.cs">
-      <DependentUpon>MainWinForm.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="NodoArblAS.cs" />
-    <Compile Include="AristaLR1.cs" />
-    <Compile Include="Cuadruplo.cs" />
-    <Compile Include="Cuadruplos.cs" />
-    <Compile Include="EdoLR1.cs" />
-    <Compile Include="EsquemaDeTraduccion.cs" />
-    <Compile Include="GRegex.cs" />
-    <Compile Include="ini.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ini.Designer.cs">
-      <DependentUpon>ini.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Gramatica.cs" />
-    <Compile Include="EditorYAnalisisGramaticas.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditorYAnalisisGramaticas.Designer.cs">
-      <DependentUpon>EditorYAnalisisGramaticas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NuevaGramatica.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NuevaGramatica.Designer.cs">
-      <DependentUpon>NuevaGramatica.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ParDatos.cs" />
-    <Compile Include="Pilas.cs" />
-    <Compile Include="PrimeroYSiguienteModal.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PrimeroYSiguienteModal.Designer.cs">
-      <DependentUpon>PrimeroYSiguienteModal.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Produccion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SentenceDefinition.cs" />
-    <Compile Include="TablaDeAcciones.cs" />
-    <Compile Include="TablaDesplazamientos.cs" />
-    <Compile Include="MetaSimbolo.cs" />
-    <Compile Include="Tabla_Errores.cs" />
-    <Compile Include="TE.cs" />
-    <Compile Include="TokenColumn.cs" />
-    <Compile Include="TokenDefinition.cs" />
-    <Compile Include="TablaSimbolos.cs" />
-    <EmbeddedResource Include="EditorYAnalisisGramaticas.resx">
-      <DependentUpon>EditorYAnalisisGramaticas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ini.resx">
-      <DependentUpon>ini.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainWinForm.resx">
-      <DependentUpon>MainWinForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NuevaGramatica.resx">
-      <DependentUpon>NuevaGramatica.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PrimeroYSiguienteModal.resx">
-      <DependentUpon>PrimeroYSiguienteModal.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -135,11 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Gramatica\Tiny_Final.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
